trunk/tests/jastadd/negative/type_errors/L1/3_TypeCheckingAndOp.ob
MODULE TestModule;
BEGIN
	IF (1) & (1<2) THEN
	END
END TestModule.
